--- a/MAKEFILE
+++ b/MAKEFILE
@@ -31,7 +31,7 @@ endif
 # Executable and object files
 EXEC = BankService.exe
 OBJS = Main.o Bank.o Account.o Customer.o
-RECORDS = records\Accounts\records.txt* records\Customers\records.txt* records\Transactions\records.txt* records\*.SUCCESS records\BANK_READY
+RECORDS = records\Accounts\records* records\Customers\records* records\Transactions\records* records\*.SUCCESS records\BANK_READY
 
 # Default target
 all: $(EXEC)
